wip - static version

--- a/remainders.html
+++ b/remainders.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
 <head>
-    <meta charset="utf-8"> <!-- utf-8 works for most cases -->
+    <!--meta http-equiv="Content-Type" content="text/html" charset="utf-8" ><!-- utf-8 works for most cases -->
     <meta name="viewport" content="width=device-width"> <!-- Forcing initial-scale shouldn't be necessary -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Use the latest (edge) version of IE rendering engine -->
     <meta name="x-apple-disable-message-reformatting">  <!-- Disable auto-scale in iOS 10 Mail entirely -->
@@ -261,7 +261,7 @@
 		        <!-- Email Header : BEGIN -->
 	            <tr>
 	                <td style="padding: 20px 0; text-align: center">
-	                    <img src="https://via.placeholder.com/200x50" width="200" height="50" alt="alt_text" border="0" style="height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 15px; color: #555555;">
+	                    <img src="https://firebasestorage.googleapis.com/v0/b/deweb-519a7.appspot.com/o/bbs.market%2Flogo-dark.png?alt=media" width="200" height="50" alt="alt_text" border="0" style="height: auto; font-family: sans-serif; font-size: 15px; line-height: 15px; color: #555555;">
 	                </td>
 	            </tr>
 		        <!-- Email Header : END -->
@@ -270,7 +270,7 @@
                 <tr>
                     <td style="background-color: #ffffff;" class="darkmode-bg">
                         <p style="color:#202020; font-family:Helvetica; font-size:20px; font-style:normal; font-weight:bold; line-height:125%; letter-spacing:normal; text-align:left; margin: 40px 20px 0px 20px">%recipient_name% - wev'e missed you on BANTER</p>
-                        <p style="color: #202020; font-family: Helvetica; font-size: 16px; line-height: 150%; text-align: left;  margin: 5px 20px 0px 20px">Come visit us again at <a href="https://bbs.market/BANTER/posts">BANTER</a> to check out the <strong>latest and greatest</strong> posts:</p>
+                        <p style="color: #202020; font-family: Helvetica; font-size: 16px; line-height: 150%; text-align: left;  margin: 5px 20px 0px 20px">Come visit us again at <a href="https://bbs.market/BANTER/posts">BANTER</a> to check out the <b>latest and greatest</b> posts:</p>
                     </td>
                 </tr>
                 <!-- Hero Image, Flush : END -->
@@ -291,8 +291,8 @@
                                                     border-radius:50%; box-shadow: 0rem 0.1rem 0.3rem #e5e7eb; display: inline-block;">
                                                 <span style="font-size: 12px; color:#64748B;position:relative; top:-0.8rem;">
                                                     Posted by
-                                                    <strong style="">viral@bbs</strong>
-                                                    <strong style="">  &#8226;</strong> Thu, 09 Jun 2022 00:58:42 GMT
+                                                    <b style="">viral@bbs</b>
+                                                    <b style="">  &#8226;</b> Thu, 09 Jun 2022 00:58:42 GMT
                                                 </span>
                                             </div>
 
@@ -339,8 +339,25 @@
 	        <table align="center" role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="margin: auto;" class="footer">
                 <tr>
                     <td style="padding: 20px; font-family: sans-serif; font-size: 12px; line-height: 15px; text-align: center; ">
-
-                        <unsubscribe style=" text-decoration: underline;">unsubscribe</unsubscribe>
+                        <!--start social-->
+                        <table style="border-collapse:collapse" cellspacing="10px" cellpadding="10px" border="0" align="center">
+                            <tbody>
+                                <tr>
+                                    <td  valign="top" align="center"></td>
+                                    <td  width="24" valign="middle" align="center">
+                                        <a href="https://deweb.us14.list-manage.com/track/click?u=4d589501e710b9ec9ddfc1ad8&amp;id=ce5075a0b8&amp;e=ffc7535483" rel="noreferrer" target="_blank" data-saferedirecturl="https://www.google.com/url?q=https://deweb.us14.list-manage.com/track/click?u%3D4d589501e710b9ec9ddfc1ad8%26id%3Dce5075a0b8%26e%3Dffc7535483&amp;source=gmail&amp;ust=1655058538329000&amp;usg=AOvVaw29sizHGIGj8h_mt8pyjgAK"><img src="https://ci5.googleusercontent.com/proxy/9JCidMa5VknLAPg4RYMmH7FGGVE7GTqtQfZp9sA6f68f38QxOQjaZjOzu4PYlR28CsRZztKJCldsl4XY02xdjYH6F1CkIDvevrQ6WPEMdEVx5YYDxBx0t302TgzwTA=s0-d-e1-ft#https://cdn-images.mailchimp.com/icons/social-block-v2/color-twitter-48.png" alt="Twitter" style="display:block;border:0;height:auto;outline:none;text-decoration:none" class="CToWUd" width="24" height="24"></a>
+                                    </td>
+                                    <td  width="24" valign="middle" align="center">
+                                        <a href="https://deweb.us14.list-manage.com/track/click?u=4d589501e710b9ec9ddfc1ad8&amp;id=811ff2d2d0&amp;e=ffc7535483" rel="noreferrer" target="_blank" data-saferedirecturl="https://www.google.com/url?q=https://deweb.us14.list-manage.com/track/click?u%3D4d589501e710b9ec9ddfc1ad8%26id%3D811ff2d2d0%26e%3Dffc7535483&amp;source=gmail&amp;ust=1655058538329000&amp;usg=AOvVaw1AfZTr4lmoXzYzomPb5Bio"><img src="https://ci5.googleusercontent.com/proxy/KLWDyxU_2JT5nOGTE6_NSp-hT37kpCU8B8HLih6GyBnhKJEvCDQsIeq4uLfJ7CQWsSCfpfcbCXVh74IrAuFYiXcU4R2sPN1CInMYwE7DpPIiYM9dGmBbl7FrtmeFZ6I=s0-d-e1-ft#https://cdn-images.mailchimp.com/icons/social-block-v2/color-facebook-48.png" alt="Facebook" style="display:block;border:0;height:auto;outline:none;text-decoration:none" class="CToWUd" width="24" height="24"></a>
+                                    </td>
+                                    <td width="24" valign="middle" align="center">
+                                        <a href="https://deweb.us14.list-manage.com/track/click?u=4d589501e710b9ec9ddfc1ad8&amp;id=055d7be9e6&amp;e=ffc7535483" rel="noreferrer" target="_blank" data-saferedirecturl="https://www.google.com/url?q=https://deweb.us14.list-manage.com/track/click?u%3D4d589501e710b9ec9ddfc1ad8%26id%3D055d7be9e6%26e%3Dffc7535483&amp;source=gmail&amp;ust=1655058538329000&amp;usg=AOvVaw0t7XZAeNvedyQrnW-KmG3y"><img src="https://ci5.googleusercontent.com/proxy/FR4I0VM10pxcUwbQ63iIF6cAOqyzEbM1yC4ru84XQ1cT1RbvvmtJzUt4RdH1WUB452ecisGFRwh877ppJp5BhUmQhUWIABs5JUY80JFlBF08huivKdmS6R-dPg=s0-d-e1-ft#https://cdn-images.mailchimp.com/icons/social-block-v2/color-link-48.png" alt="Website" style="display:block;border:0;height:auto;outline:none;text-decoration:none" class="CToWUd" width="24" height="24"></a>
+                                    </td>
+                                    <td ></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <!--end social-->
                     </td>
                 </tr>
             </table>
@@ -354,7 +371,7 @@
         </div>
 
         <!-- Full Bleed Background Section : BEGIN -->
-        <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="background-color: #709f2b;" class="darkmode-fullbleed-bg">
+        <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="background-color: #5173fd;" class="darkmode-fullbleed-bg">
             <tr>
                 <td>
                     <div align="center" style="max-width: 600px; margin: auto;" class="email-container">
@@ -365,8 +382,13 @@
                         <![endif]-->
                         <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                             <tr>
-                                <td style="padding: 20px; text-align: left; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #ffffff;">
-                                    <p style="margin: 0;">Maecenas sed ante pellentesque, posuere leo id, eleifend dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent laoreet malesuada cursus. Maecenas scelerisque congue eros eu posuere. Praesent in felis ut velit pretium lobortis rhoncus ut&nbsp;erat.</p>
+                                <td style="padding: 20px; text-align: center; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #ffffff;">
+                                    <p style="margin: 0;">
+                                        <em>Copyright © 2022 deweb, All rights reserved.</em><br>
+                                        Want to change how you receive these emails?<br>
+                                        You can <a href="https://deweb.us14.list-manage.com/profile?u=4d589501e710b9ec9ddfc1ad8&amp;id=f696027425&amp;e=ffc7535483&amp;c=dfa4f41407" style="color:#656565;font-weight:normal;text-decoration:underline" rel="noreferrer" target="_blank" data-saferedirecturl="https://www.google.com/url?q=https://deweb.us14.list-manage.com/profile?u%3D4d589501e710b9ec9ddfc1ad8%26id%3Df696027425%26e%3Dffc7535483%26c%3Ddfa4f41407&amp;source=gmail&amp;ust=1655058538329000&amp;usg=AOvVaw1WZyxMNCy3MAHzhzPmhomp">update your preferences</a> or <a href="https://deweb.us14.list-manage.com/unsubscribe?u=4d589501e710b9ec9ddfc1ad8&amp;id=f696027425&amp;e=ffc7535483&amp;c=dfa4f41407" style="color:#656565;font-weight:normal;text-decoration:underline" rel="noreferrer" target="_blank" data-saferedirecturl="https://www.google.com/url?q=https://deweb.us14.list-manage.com/unsubscribe?u%3D4d589501e710b9ec9ddfc1ad8%26id%3Df696027425%26e%3Dffc7535483%26c%3Ddfa4f41407&amp;source=gmail&amp;ust=1655058538329000&amp;usg=AOvVaw3kIGZEjXsnTIHFucxg5eWU">unsubscribe from this list</a>.<br>
+                                        <br>
+                                    </p>
                                 </td>
                             </tr>
                         </table>
